hphp/hack/test/typecheck/aktuple/subtyping_interfaces.php.exp
File "subtyping_interfaces.php", line 17, characters 29-42:
Some type arguments violate their constraints (Typing[4323])
  File "hackarray.hhi", line 24, characters 28-29:
  `Tk` is a constrained type parameter
  File "hackarray.hhi", line 24, characters 34-41:
  This type constraint is violated
  File "hackarray.hhi", line 24, characters 34-41:
  Expected `arraykey`
  File "subtyping_interfaces.php", line 17, characters 36-37:
  But got `Tk`
